syntax = "proto3";

package chat;

message ChatMessageRequest {
  string text = 1;
}

message ChatMessage {
  string author = 1;
  string text = 2;
}

message JoinChannelRequest {
  string channel_name = 1;
}

message LoginRequest {
  string username = 1;
}

message LoginResponse {
}

service Chat {
  rpc Login(LoginRequest) returns(LoginResponse) {};
  rpc SendMessage(ChatMessageRequest) returns(ChatMessage) {};
  rpc JoinChannel(JoinChannelRequest) returns(stream ChatMessage) {};
}
